# Voting_Management_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  render.yaml  run.bat  supabase_schema.sql
backend/: json.hpp  voting_server.cpp  voting_server_linux.cpp
backend/server/: CMakeLists.txt  Makefile  run_local.sh
backend/server/include/cache/: CandidateCache.h  RedisClient.h
backend/server/include/controllers/: AuthController.h  CandidateController.h  ElectionController.h  FaceController.h  PositionController.h  PublicMultiVoteController.h  PublicVoteController.h  VoterController.h
backend/server/include/core/: Config.h  Logger.h  Metrics.h  ThreadPool.h
backend/server/include/db/: SupabaseClient.h
backend/server/include/net/: EpollServer.h  HttpRequest.h  HttpResponse.h
backend/server/src/: main.cpp
backend/server/src/cache/: CandidateCache.cpp  RedisClient.cpp
backend/server/src/controllers/: AuthController.cpp  CandidateController.cpp  ElectionController.cpp  FaceController.cpp  PositionController.cpp  PublicMultiVoteController.cpp  PublicVoteController.cpp  VoterController.cpp
backend/server/src/core/: Config.cpp  Logger.cpp  ThreadPool.cpp
backend/server/src/db/: SupabaseClient.cpp
backend/server/src/net/: EpollServer.cpp  HttpRequest.cpp  HttpResponse.cpp
docker/: Dockerfile.nginx  Dockerfile.server
face-service/: .env.example  Dockerfile  main.py  modal_app.py  requirements.txt
frontend/: admin.html  config.js  index.html  loader.html  login.html  netlify.toml  test.html
load-test/: README.md  load_test.js  smoke_test.js
monitoring/: alert_rules.yml  docker-compose.monitoring.yml  prometheus.yml
(+66 files in other folders)
